--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/db8e98ggo/image/upload/v1734415183/sicmas_2500_x_931_px_vxwyxm.png" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Sicmas</title>
   </head>
   <body>
     <div id="root"></div>
